syntax = "proto3";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc SayHelloFrom (HelloRequestFrom) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message HelloRequestFrom {
  string name = 1;
  string from = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
